--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "@rappler-tech/sdk-sharing",
   "version": "1.3.0",
   "description": "This package contains the social media share used in Rappler site",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/LouisMaycol/social-media-share"
+  },
   "main": "lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
