Updated package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@rappler-tech/sdk-sharing",
+  "name": "social-media-sharing",
   "version": "1.0.0",
   "description": "This package contains the social media share used in Rappler site",
   "repository": {
